--- a/LittleRedRidingHood.css
+++ b/LittleRedRidingHood.css
@@ -8,3 +8,10 @@ body{
     text-align: center;
     margin-bottom: 20px;
 }
+
+div{
+    margin-bottom: 20px;
+    text-align: center;
+    font-style: italic;
+    font-size: 20px;
+}
